added schema.org in formato json-ld

--- a/Project/index.html
+++ b/Project/index.html
@@ -17,7 +17,23 @@
     <!-- custom css -->
     <link rel="stylesheet" href="css/custom.css">
 
-    <title>Progetto Meteo</title>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "WebPage",
+            "name": "Progetto Meteo Live",
+            "description": "Un'applicazione web per monitorare il meteo di alcune città del mondo.",
+            "keywords": "meteo, meteo live, weather, app meteo, web weather",
+            "inLanguage": "it",
+            "author": {
+                "@type": "Person"
+                "givenName": "Davide"
+                "familyName": "Carniselli"
+            }
+        }
+    </script>
+
+    <title>Progetto Meteo Live</title>
 </head>
 
 <body>
