missing ',' on the schema

--- a/Project/index.html
+++ b/Project/index.html
@@ -26,8 +26,8 @@
             "keywords": "meteo, meteo live, weather, app meteo, web weather",
             "inLanguage": "it",
             "author": {
-                "@type": "Person"
-                "givenName": "Davide"
+                "@type": "Person",
+                "givenName": "Davide",
                 "familyName": "Carniselli"
             }
         }
