--- a/Project/index.html
+++ b/Project/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="it">
 
 <head>
     <!-- Required meta tags -->
@@ -9,7 +9,7 @@
     <meta keywords="meteo, meteo live, weather, app meteo, web weather">
     <meta name="description" content="Un'applicazione web per monitorare il meteo di alcune città del mondo.">
 
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="favicon.ico">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -42,7 +42,7 @@
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="images/favicon.ico" alt="logo" width="30" height="24"
+                    <img src="favicon.ico" alt="logo" width="30" height="24"
                         class="d-inline-block align-text-top">
                     Meteo Live
                 </a>
@@ -58,9 +58,12 @@
                     card sottostanti.</p>
             </div>
 
-            <div class="p-3 input-group">
-                <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
-                    aria-describedby="search-addon" />
+            <div class="input-group p-3">
+                <div class="form-floating flex-grow-1">
+                    <input type="search" class="form-control rounded" id="floatingInput" placeholder="es. Milan, IT"
+                        aria-label="Search" aria-describedby="search-addon" />
+                    <label for="floatingInput">es. Milan, IT</label>
+                </div>
                 <button type="button" class="btn btn-outline-primary">search</button>
             </div>
 
@@ -72,7 +75,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-text">data</p>
-                            <img src="images/favicon.ico" class="card-img-top" style="width: 64px; height: 64px;">
+                            <img src="favicon.ico" class="card-img-top" style="width: 64px; height: 64px;">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
                             <p class="card-text">temperatura (massima e minima)</p>
                             <p class="card-text">umidità</p>
@@ -88,7 +91,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-text">data</p>
-                            <img src="images/favicon.ico" class="card-img-top" style="width: 64px; height: 64px;">
+                            <img src="favicon.ico" class="card-img-top" style="width: 64px; height: 64px;">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
                             <p class="card-text">temperatura (massima e minima)</p>
                             <p class="card-text">umidità</p>
@@ -104,7 +107,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-text">data</p>
-                            <img src="images/favicon.ico" class="card-img-top" style="width: 64px; height: 64px;">
+                            <img src="favicon.ico" class="card-img-top" style="width: 64px; height: 64px;">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
                             <p class="card-text">temperatura (massima e minima)</p>
                             <p class="card-text">umidità</p>
@@ -120,7 +123,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-text">data</p>
-                            <img src="images/favicon.ico" class="card-img-top" style="width: 64px; height: 64px;">
+                            <img src="favicon.ico" class="card-img-top" style="width: 64px; height: 64px;">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
                             <p class="card-text">temperatura (massima e minima)</p>
                             <p class="card-text">umidità</p>
