--- a/Project/index.html
+++ b/Project/index.html
@@ -42,8 +42,7 @@
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="favicon.ico" alt="logo" width="30" height="24"
-                        class="d-inline-block align-text-top">
+                    <img src="favicon.ico" alt="logo" width="30" height="24" class="d-inline-block align-text-top">
                     Meteo Live
                 </a>
             </div>
@@ -64,7 +63,24 @@
                         aria-label="Search" aria-describedby="search-addon" />
                     <label for="floatingInput">es. Milan, IT</label>
                 </div>
-                <button type="button" class="btn btn-outline-primary">search</button>
+                <button type="button" class="btn btn-outline-primary" onclick="showMe()">search</button>
+            </div>
+
+            <div id="hidden-card" class="p-3 text-center">
+                <div class="card rounded-3" style="width: 18rem;">
+                    <div class="card-header py-3">
+                        <h4 id="city" class="my-0 f2-normal">Città Inserita</h4>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">data</p>
+                        <img src="favicon.ico" class="card-img-top" style="width: 64px; height: 64px;>
+                        <h5 class="card-title">meteo</h5>
+                        <p class="card-text">temperatura (massima e minima)</p>
+                        <p class="card-text">umidità</p>
+                        <p class="card-text">vento</p>
+                        <a href="#" class="btn btn-primary">Altro</a>
+                    </div>
+                </div>
             </div>
 
             <div class="p-3 row row-cols-1 row-cols-md-4 mb-2 mt-4 text-center">
@@ -145,20 +161,10 @@
 
 
 
-
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="js/scriptJS.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
 </body>
 
 </html>
