--- a/Project/index.html
+++ b/Project/index.html
@@ -73,7 +73,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">data</p>
-                        <img src="favicon.ico" class="card-img-top" style="width: 64px; height: 64px;>
+                        <img src="favicon.ico" class="card-img-top" style="width: 64px; height: 64px;">
                         <h5 class="card-title">meteo</h5>
                         <p class="card-text">temperatura (massima e minima)</p>
                         <p class="card-text">umidità</p>
