changed some text

--- a/Project/index.html
+++ b/Project/index.html
@@ -57,6 +57,7 @@
                 <h1>Meteo Live nel Mondo</h1>
                 <p>Usa la barra di ricerca per cercare una città specifica oppure consulta le principali città nelle
                     card sottostanti.</p>
+                <p>Cliccando su una città potrai vedere le previsioni settimanali e dei dati sulle previsioni precedenti.</p>
             </div>
 
             <div class="input-group p-3">
@@ -69,7 +70,7 @@
             </div>
 
             <div id="hidden-card" class="p-3 text-center">
-                <div class="card rounded-3 mx-auto" style="width: 50rem;">
+                <div class="card rounded-3 mx-auto" style="width: 30rem;">
                     <div class="card-header py-3">
                         <h4 id="city" class="my-0 f2-normal">Città Inserita</h4>
                     </div>
@@ -82,7 +83,7 @@
                             <li class="list-group-item">umidità</li>
                             <li class="list-group-item">vento</li>
                         </ul>
-                        <a href="#" class="btn btn-primary stretched-link">Altro</a>
+                        <a href="#" class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                     </div>
                 </div>
             </div>
@@ -102,7 +103,7 @@
                                 <li class="list-group-item">umidità</li>
                                 <li class="list-group-item">vento</li>
                             </ul>
-                            <a href="#" class="btn btn-primary stretched-link">Altro</a>
+                            <a href="#" class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                         </div>
                     </div>
                 </div>
@@ -120,7 +121,7 @@
                                 <li class="list-group-item">umidità</li>
                                 <li class="list-group-item">vento</li>
                             </ul>
-                            <a href="#" class="btn btn-primary stretched-link">Altro</a>
+                            <a href="#" class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                         </div>
                     </div>
                 </div>
@@ -138,7 +139,7 @@
                                 <li class="list-group-item">umidità</li>
                                 <li class="list-group-item">vento</li>
                             </ul>
-                            <a href="#" class="btn btn-primary stretched-link">Altro</a>
+                            <a href="#" class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                         </div>
                     </div>
                 </div>
@@ -156,7 +157,7 @@
                                 <li class="list-group-item">umidità</li>
                                 <li class="list-group-item">vento</li>
                             </ul>
-                            <a href="#" class="btn btn-primary stretched-link">Altro</a>
+                            <a href="#" class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                         </div>
                     </div>
                 </div>
