fixed small device responsiveness

--- a/Project/index.html
+++ b/Project/index.html
@@ -70,7 +70,7 @@
             </div>
 
             <div id="hidden-card" class="p-3 text-center">
-                <div class="card rounded-3 mx-auto" style="width: 30rem;">
+                <div id="hidden-card-intern" class="card rounded-3 mx-auto">
                     <div class="card-header py-3">
                         <h4 id="city" class="my-0 f2-normal">Città Inserita</h4>
                     </div>
@@ -90,7 +90,7 @@
 
             <div class="p-3 row row-cols-1 row-cols-xxl-4 row-cols-lg-3 row-cols-md-2 mb-2 mt-4 text-center">
                 <div class="col">
-                    <div class="card rounded-3 mx-auto" style="width: 18rem;">
+                    <div class="card-sizing card rounded-3 mx-auto">
                         <div class="card-header py-3">
                             <h4 class="my-0 f2-normal">Milano</h4>
                         </div>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card rounded-3 mx-auto" style="width: 18rem;">
+                    <div class="card-sizing card rounded-3 mx-auto">
                         <div class="card-header py-3">
                             <h4 class="my-0 f2-normal">Londra</h4>
                         </div>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card rounded-3 mx-auto" style="width: 18rem;">
+                    <div class="card-sizing card rounded-3 mx-auto">
                         <div class="card-header py-3">
                             <h4 class="my-0 f2-normal">Tokyo</h4>
                         </div>
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card rounded-3 mx-auto" style="width: 18rem;">
+                    <div class="card-sizing card rounded-3 mx-auto">
                         <div class="card-header py-3">
                             <h4 class="my-0 f2-normal">New York</h4>
                         </div>
