bozza form aggiunta città

--- a/Project/index.html
+++ b/Project/index.html
@@ -167,8 +167,12 @@
             </div>
 
             <!-- form per suggerimento aggiunta città -->
+            <h3>Inserisci i tuoi dati e la città da aggiungere nel form sottostante.</h3>
             <form>
-                
+                <div class="mb-3">
+                    <label for="user-email" class="form-label">Indirizzo Email</label>
+                    <input type="email" class="form-control" id="user-email">
+                  </div>
             </form>
 
             <div id="*" class="pt-5">
