--- a/Project/index.html
+++ b/Project/index.html
@@ -86,7 +86,7 @@
                             <li class="list-group-item">umidità</li>
                             <li class="list-group-item">vento</li>
                         </ul>
-                        <a href="#" class="btn btn-primary stretched-link">Previsioni Settimanali</a>
+                        <a href="weather.html" class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                     </div>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                                 <li class="list-group-item">umidità</li>
                                 <li class="list-group-item">vento</li>
                             </ul>
-                            <a href="#" class="btn btn-primary stretched-link">Previsioni Settimanali</a>
+                            <a href="weather.html" class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                         </div>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                                 <li class="list-group-item">umidità</li>
                                 <li class="list-group-item">vento</li>
                             </ul>
-                            <a href="#" class="btn btn-primary stretched-link">Previsioni Settimanali</a>
+                            <a href="weather.html" class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                         </div>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                                 <li class="list-group-item">umidità</li>
                                 <li class="list-group-item">vento</li>
                             </ul>
-                            <a href="#" class="btn btn-primary stretched-link">Previsioni Settimanali</a>
+                            <a href="weather.html" class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                         </div>
                     </div>
                 </div>
@@ -161,11 +161,13 @@
                                 <li class="list-group-item">umidità</li>
                                 <li class="list-group-item">vento</li>
                             </ul>
-                            <a href="#" class="btn btn-primary stretched-link">Previsioni Settimanali</a>
+                            <a href="weather.html" class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <hr class="divider">
 
             <!-- form per suggerimento aggiunta città -->
             <div class="contact-me mt-4 card rounded-3 mx-auto">
@@ -203,16 +205,14 @@
                 </p>
             </div>
         </div>
-
-        <!-- FOOTER -->
-        <footer class="container py-3 my-4 border-top">
-            <p class="float-end"><a href="#">Privacy</a> &middot; <a href="#">Terms</a> &middot; <a href="#">Back to
-                    top</a></p>
-            <p>&copy; 2022-2022 Carniselli Davide - Unimi Informatica </p>
-        </footer>
     </main>
 
-
+    <!-- FOOTER -->
+    <footer class="p-3 mt-auto border-top">
+        <p class="float-end"><a href="#">Privacy</a> &middot; <a href="#">Terms</a> &middot; <a href="#">Back to
+                top</a></p>
+        <p>&copy; 2022-2022 Carniselli Davide - Unimi Informatica </p>
+    </footer>
 
     <script src="js/scriptJS.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
