added locateme button + some icon

--- a/Project/index.html
+++ b/Project/index.html
@@ -69,6 +69,7 @@
                     <label for="floatingInput">es. Milan, IT</label>
                 </div>
                 <button type="button" class="btn btn-outline-primary flex-shrink-0" onclick="showMe()">search</button>
+                <button type="button" class="btn btn-outline-secondary flex-shrink-0" onclick="locateMe()"><img src="images/location.png"></button>
             </div>
 
             <!-- card città inserita dall'utente -->
